# VirtualMe

./: .env.example  .gitignore  CHANGELOG.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Next-Steps.md  TRUNK.md  architecture-demo-flow.md  engineering-review-2026-05-24.md  ids-trac-guide.md
examples/: README.md
examples/sample-maker/: BOUNDARIES.md  HISTORY.md  JOURNAL.md  PEOPLE.md  SKILL.md  SOUL.md  START_HERE.md  STATE.md  VOICE.md  index.md  manifest.json
scripts/: check_moat_hygiene.sh  seed_demo.py
specs/: 05-boundaries-and-pii.md  07-related-work.md  09-interview-engine-v2.md  10-personality-infrastructure.md  11-constitution.md
src/virtualme/: byok_admin.py  config.py  main.py  subject.py  subject_status.py
src/virtualme/blind_test/: prepare.py
src/virtualme/evals/: __main__.py  (+2 more)
tests/: conftest.py
tests/integration/: test_current_question_tracking.py  test_intent_gate.py  test_process_turn_flow.py
tests/unit/: test_adapter.py  test_anchor_extractor.py  test_auto_export.py  test_blind_test.py  test_bot.py  test_briefing.py  test_byok.py  test_checklist.py  test_commands.py  test_config.py  test_depth_evaluator.py  test_download_tokens.py  test_evals.py  test_export.py  test_follow_up_cjk.py  test_json_utils.py  test_lang.py  test_line_transport.py  test_models.py  test_p1_state_trait_separation.py  test_p3_reflective_restraint.py  test_p4_multi_session_validation.py  test_p5_self_correction_agency.py  test_persona_export_request.py  test_pii.py  test_ppa.py  test_question_selector.py  test_question_state.py  test_reinjection.py  test_responder.py  test_responder_scorecard.py  test_schema_migrations.py  test_session_lifecycle.py  test_snapshot.py  test_triangulation.py  test_triples.py  test_turn_reasoner_prompt.py  test_turn_state.py  test_week_progression.py
(+49 files in other folders)
