[project]
name = "virtualme"
version = "1.1.0"
description = "Interview-driven personal AI agent extraction pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VirtualMe Contributors" }]
keywords = ["ai-agent", "personal-ai", "claude", "interview", "persona"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "PyYAML>=6.0.2",
    "python-multipart>=0.0.12",
    "line-bot-sdk>=3.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/MakiDevelop/VirtualMe"
Issues = "https://github.com/MakiDevelop/VirtualMe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/virtualme"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/virtualme/snapshot/behavior_profile.py" = ["RUF001", "RUF002", "RUF003"]
"scripts/seed_demo.py" = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
